2009-06-27:
* Fixed: bug with old tab tooltip after 'Save as'

2009-06-04:
* Fixed: crash on opening a recent file
* Fixed: single instance for multiple users (thanks to David Stegbauer)

2009-05-09:
* Fixed: symbols '\n', '\t'and '\r' in replacing string

2009-05-08:
* Fixed: getting text from FindDlg

2009-05-07:
* Added: search for multiline regexps
* Added: tooltip for multi-line checkbox (in FindDlg)
* Added: storing string settings from plugins

2009-05-06:
* Fixed: ugly empty status labels if no documents opened
* Added: toggling marker by clicking on line number
* Fixed: bug with text completer in find dialog when start 
  searching with selected text
* Added: option 'Close app after the last doc was closed'
* Added: context menu for tabbar (beside the tabs)
* Added: activating the app's window when opening a file remotely
* Fixed: bug with pop-up about log file on Windows at the 1st run
* Added: truncating the log file when the application starts
* Added: document lines count in statusbar
* Fixed: bug with too frequent updates of line numbers (was connected 
  to signal textChanged() instead of linesChanged())
* Fixed: overlapping tabbar's menu over tab's menu

2009-05-05:
* Added: 'Close all' to tab's context menu
* Added: 'Save all' to tab's context menu and main menu
* Added: block/line commenting for Java, C#, CSS, JavaScript, PHP

-------------------------------
Preview-version 0.7.528
-------------------------------

2009-04-27:
* Fixed: opening a directory

2009-04-26:
* Added: close button on each tab (for Qt >= 4.5)

2009-04-25:
* Added: moving tabs (for Qt >= 4.5)

2009-04-24:
* Added: storing the Find Dialog size
* Added: changing split orientation

2009-04-23:
* Added: customization for indents color and matching brace color

2009-04-22:
* Fixed: cursor color now has the same color as text

2009-04-20:
* Added: optional stripping trailing spaces when saving a file
* Fixed: bug with wrong line ending guessing

2009-04-19: