@@ -33,9 +33,11 @@ public:
 	~LexerStorage();
 	QString lexerName(const QString& fileName) const;
 	QsciLexer* lexer(const QString& name, const QFont&);
-	QColor curLineColor(const QString&) const;
+
+	QColor curLineColor    (const QString&) const;
+	QColor selectionBgColor(const QString&) const;
+
 	void updateLexer(const QString& name, const QFont& font);
-	
 	void getLexersList(QStringList&) const;
 
 	static LexerStorage* instance();
