@@ -1,3 +1,6 @@
+2009-07-07:
+* Added: changing the selection background color
+
 2009-06-27:
 * Fixed: bug with old tab tooltip after 'Save as'
 
